# mmm-framework

./: .claudeignore  .coverage  .gitignore  .readthedocs.yaml  CLAUDE.md  Makefile  README.md  REFACTORING_GUIDE.md  about.html  agent_client_report.html  agent_client_slides.html  agent_mmm_report.html  agent_prefit_readout.html  agent_project_report.html  agent_project_slides.html  agent_workflow_output.md  bayesian-workflow.html  causal-inference.html  critique.md  docs-improvement-plan.md  extended_mmm_report.html  faq.html  full_validation_report.html  gen_structural_report.py  index.html  mmm-example-report.html  mmm_report.html  pyproject.toml  pytest.ini  scientific-modeling.html  scientific-workflow-demo.html  scientific-workflow-simple.html  sitemap.xml  technical-guide.html  test_cv_timeseries_report.html  test_plotly.html  validation_report.html  variable-selection.html
.githooks/: pre-commit
api/: .env.example  __init__.py  auth.py  backfill_org.py  config.py  main.py  middleware.py  rate_limiter.py  redis_service.py  schemas.py  storage.py  worker.py
app/: Home.py  api_client.py  app.py  app_depreciated.py  app_v2.py  app_with_jobs.py
assets/: Augur Continuous Learning Math_ Gap-by-Gap Technical Audit and R.md  Media Performance Readout.html  continous_learning.md
competitive-analysis/: README.md  competitor-analysis.md  mmm-competitor-comparison.html
config/: model_config.example.yaml
docs/: 404.html  TEMPLATE-SIDEBAR.html  TEMPLATE.html  about.html  aurora-00-overview.html  aurora-01-causality.html  aurora-02-base-mmm.html  aurora-03-extended-mmm.html  aurora-04-reporting.html  aurora-05-unified-workflow.html  bayesian-workflow.html  blog-activity-bias.html  blog-attribution-incrementality.html  blog-bayesian-mmm-carryover-shape.html  blog-bed-bo-bandits.html  blog-calibrating-mmm-experiments.html  blog-carryover-experiment-timing.html  blog-causal-estimates-observational.html  blog-causalimpact-bsts.html  blog-continuous-learning-interactions.html  blog-geo-experiments-tbr.html  blog-geo-holdout-eig.html  blog-lindley-to-dad.html  blog-modeling-pitfalls.html  blog-multiple-comparisons.html  blog-p-hacking-evidence.html  blog-p-values-across-models.html  blog-pretrends-testing.html  blog-prior-predictive-sbc.html  blog-staggered-did.html  blog-surrogate-outcomes.html  blog-switchback-experiments.html  blog-synthetic-control.html  blog-table-2-fallacy-mmm.html  blog-table-2-fallacy.html  blog-testing-no-difference.html  blog-thompson-sampling.html  blog-when-sampling-fails.html  blog.html  business-readiness-report.html  (+79 more)
examples/: ex_agent_workflow.py  ex_builder.py  ex_config.py  ex_continuous_learning.py  ex_extended_reporter.py  ex_extensions.py  ex_fit_and_report.py  ex_model_workflow.py  ex_models.py  ex_reporter.py  ex_validation_workflow.py  ex_vertex_agent.py  mmm_report_basic.html  mmm_report_builder.html  mmm_report_corporate.html  mmm_report_executive.html  mmm_report_minimal.html  mmm_report_sage.html  mmm_report_warm.html  register_awareness_garden_model.py  register_lca_garden_model.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  mmm-framework-callflow.html
nbs/: 00_overview.ipynb  01_causality.ipynb  02_base_mmm.ipynb  03_extended_mmm.ipynb  04_reporting.ipynb  05_unified_workflow.ipynb  MMM Framework.html  README.md  README_aurora.md  README_lifecycle.md  README_math.md  README_stress.md  README_workshop.md  backtest_validation.ipynb  breakout_weighting.ipynb  build_acquisition_animation.py  build_acquisition_viz.py  build_aurora_notebooks.py  build_backtest_validation.py  build_breakout_weighting.py  build_continuous_learning.py  build_continuous_learning_story.py  build_create_pptx_demo.py  build_discount_animation.py  build_lifecycle_00_overview.py  build_lifecycle_01_fit_baseline.py  build_lifecycle_02_prioritize.py  build_lifecycle_03_design.py  build_lifecycle_04_calibrate.py  build_lifecycle_05_allocate.py  build_lifecycle_06_reevaluate.py  build_math_00_overview.py  build_math_01_adstock.py  build_math_02_saturation.py  build_math_03_seasonality_trend.py  build_math_04_bayesian_model.py  build_math_05_calibration.py  build_math_06_extensions.py  build_misspecification_animation.py  build_mmm_walkthrough.py  (+57 more)
scripts/: run_misspec_mcse.py  seed_atelier_demo.py  seed_demo_project.py  seed_workflow_demo.py
shared/: components.js  styles.css
technical-docs/: ad-platform-integrations.md  agent-knowledge-workspace.md  agent-session-kernels-phase1.md  agent-session-kernels-phase2.md  agent-session-kernels-phase3.md  agent-session-kernels-phase4.md  agent-session-kernels.md  atelier-notebook.md  budget-optimizer-v2.md  business-readiness-p0.md  causal-elicitation.md  code-side-notes.md  commercialization-summary.md  continuous-learning-multiplicative-effects.md  continuous-learning-wiring.md  continuous-learning.md  cost-model.md  coverage-diagnostics.md  cross-channel-synergy.md  custom-model-config.md  data-processing.md  deferred-causal-features-validation-plan.md  deferred-causal-features.md  design-partner-program.md  disaster-recovery.md  doc-snippet-testing.md  estimands.md  experiment-economics.md  experiment-methods-framework.md  experiment-methods-nongeo.md  experiment-net-economics.md  extension-model-priors.md  flexible-dataset.md  future_implementation.md  holiday-event-effects.md  impression-level-roi.md  long-term-brand-effects.md  ltv-clv-modeling.md  mmm-modeling-walkthrough.md  mmm-robustness-report.md  (+16 more)
tests/: conftest.py  test_ad_platform_stubs.py  test_adstock_parametric.py  test_agent_context.py  test_agent_modes.py  test_agent_tables_branding.py  test_agent_tool_schemas.py  test_agent_workspace_kb.py  test_agents_llm.py  test_analysis.py  test_api_estimands.py  test_api_triangulation.py  test_approx_fit.py  test_arm_shares.py  test_artifact_provenance.py  test_artifact_question_stamp.py  test_atelier_notebook.py  (+169 more)
(+991 files in other folders)
