[project]
name = "mmm-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew Reda", email = "m.reda94@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arq>=0.25.0",
    "cloudpickle>=3.1.2",
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "numpyro>=0.19.0",
    "nutpie>=0.16.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymc>=5.26.1",
    "pytest-xdist>=3.8.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "statsmodels>=0.14.0",
    "uvicorn>=0.38.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mmm-framework",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
app = [
    "plotly>=6.5.0",
    "streamlit>=1.52.1",
]
docs = [
    "sphinx>=7.0,<8.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=3.0",
]

[tool.uv.sources]
mmm-framework = { workspace = true }


