[project]
name = "mmm-framework"
version = "0.1.0"
description = "Bayesian Marketing Mix Modeling framework with causal calibration, pressure testing, and an adaptive measurement loop"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Matthew Reda", email = "m.reda94@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arq>=0.25.0",
    "cloudpickle>=3.1.2",
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "numpyro>=0.19.0",
    "nutpie>=0.16.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymc>=5.26.1",
    "pytest-xdist>=3.8.0",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "statsmodels>=0.14.0",
    "uvicorn>=0.38.0",
    "openpyxl>=3.1.0",
    # LLM stack floors are pinned to the locked 1.x line. The agent code targets
    # the langchain/langgraph 1.x API; the old pre-1.0 floors let a no-lock
    # `pip install` resolve to incompatible 0.x APIs that break the agent at
    # import/runtime. Keep these in step with uv.lock when upgrading.
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-anthropic>=1.4.3",
    "langchain-openai>=1.2.1",
    "rich>=13.0.0",
    "langchain-google-vertexai>=3.2.3",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
# Google Cloud data integrations (GCS object reads + BigQuery). Lazy-imported;
# the core framework never requires these. Install with:  uv sync --extra gcp
gcp = [
    "google-cloud-storage>=2.14.0",
    "google-cloud-bigquery>=3.17.0",
    "db-dtypes>=1.2.0",
    "pyarrow>=14.0.0",
]
# NOTE: Pathfinder VI (fit(method="pathfinder")) needs `pymc-extras` + `blackjax`.
# It is intentionally NOT declared as an extra here: the current `pymc-extras`
# requires pymc>=6, so locking it would force-upgrade the whole core stack
# (pymc/pytensor/arviz) for every install. Pathfinder is lazy-imported with a
# clear install hint; install it manually if you want it (and accept the pymc
# upgrade in that environment). MAP + ADVI need no extra deps.

[project.urls]
Homepage = "https://redam94.github.io/mmm-framework/"
Documentation = "https://redam94.github.io/mmm-framework/"
Repository = "https://github.com/redam94/mmm-framework"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.15.0",
    "black>=24.0.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mmm-framework",
    "networkx>=3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]
app = [
    "plotly>=6.5.0",
    "streamlit>=1.52.1",
    # Powers the Atelier editor's Format + live lint endpoints (ruff check/format).
    "ruff>=0.13.0",
]
docs = [
    "sphinx>=7.0,<8.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "myst-parser>=3.0",
]

[tool.uv.sources]
mmm-framework = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Default rule set (pyflakes F + a subset of pycodestyle E). Kept deliberately
# small so the gate is enforceable on this codebase today; ratchet up over time.
[tool.ruff.lint.per-file-ignores]
# __init__.py legitimately re-exports names (unused-import / star-import) and
# orders some imports after package setup.
"__init__.py" = ["F401", "F403", "E402"]
# Agent entrypoint modules do module-level setup (env/logging) before imports.
"src/mmm_framework/agents/tools.py" = ["E402"]
"src/mmm_framework/agents/causal_tools.py" = ["E402"]
"src/mmm_framework/agents/graph.py" = ["E402"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmm_framework"]

# Keep the sdist lean: ship the library + metadata only, not the monorepo
# (frontend/, docs/, nbs/, api/, app/, tests/ are not needed to `pip install`).
[tool.hatch.build.targets.sdist]
include = [
    "/src/mmm_framework",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

# Never ship dev cruft or the 3.2 GB runtime session DB that lives in the
# package tree. Applies to every build target.
[tool.hatch.build]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.db",
    "**/*.db-shm",
    "**/*.db-wal",
    "**/*.egg-info",
]


